<?xml version="1.0"?>
<package format="2">
  <name>raspicam2</name>
  <version>0.2.1</version>
  <description>Package to access the Raspberry Pi Camera from ROS2.</description>

  <maintainer email="send2arohan@gmail.com">Rohan Agrawal</maintainer>
  <maintainer email="wayne@gramlich.net">Wayne Gramlich</maintainer>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>ffmpeg</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>ffmpeg</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
